opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"      {>= "4.02.3"}
  "dune"       {>= "2.5.1"}
  "irmin"      {>= "2.0.0"}
  "git"
  "digestif"   {>= "0.9.0"}
  "astring"
  "fpath"
  "logs"
  "lwt"
  "uri"
  "irmin-test" {with-test & >= "2.0.0"}
  "irmin-mem"  {with-test & >= "2.0.0"}
  "git-unix"   {with-test}
  "mtime"      {with-test & >= "1.0.0"}
]

synopsis: "Git backend for Irmin"
description: """
`Irmin_git` expose a bi-directional bridge between Git repositories and
Irmin stores.
"""

pin-depends: [
  [ "git-unix.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "git.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "carton.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "carton-lwt.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "carton-git.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "nss.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
]
