opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"      {>= "4.02.3"}
  "dune"       {>= "2.5.1"}
  "crunch"     {>= "2.2.0"}
  "webmachine" {>= "0.6.0"}
  "irmin"      {>= "2.2.0"}
  "cohttp-lwt" {>= "1.0.0"}
  "irmin-git"  {with-test & >= "2.0.0"}
  "irmin-mem"  {with-test & >= "2.0.0"}
  "irmin-test" {with-test & >= "2.0.0"}
  "git-unix"   {with-test}
  "digestif"   {with-test & >= "0.6.1"}
]

synopsis: "HTTP client and server for Irmin"

pin-depends: [
  [ "git-unix.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "git.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "carton.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "carton-lwt.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "carton-git.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "nss.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "conduit.dev" "git+https://github.com/dinosaure/ocaml-conduit.git#4dffc531e6dde24fcc6aec84bb453f5bea277e80" ]
  [ "conduit-lwt.dev" "git+https://github.com/dinosaure/ocaml-conduit.git#4dffc531e6dde24fcc6aec84bb453f5bea277e80" ]
  [ "cohttp.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#63e6026178b8a8750837f343d386ad5445aa236d" ]
  [ "cohttp-lwt.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#63e6026178b8a8750837f343d386ad5445aa236d" ]
]
