opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"      {>= "4.02.3"}
  "dune"       {>= "2.5.1"}
  "crunch"     {>= "2.2.0"}
  "webmachine" {>= "0.6.0"}
  "irmin"      {>= "2.2.0"}
  "cohttp-lwt" {>= "1.0.0"}
  "irmin-git"  {with-test & >= "2.0.0"}
  "irmin-mem"  {with-test & >= "2.0.0"}
  "irmin-test" {with-test & >= "2.0.0"}
  "git-unix"   {with-test}
  "digestif"   {with-test & >= "0.9.0"}
]

synopsis: "HTTP client and server for Irmin"

pin-depends: [
  [ "git-unix.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "git.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "carton.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "carton-lwt.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "carton-git.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "nss.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "conduit.dev" "git+https://github.com/dinosaure/ocaml-conduit.git#8912d458b2f3e43245e99cf3cb74e9c00712a8b0" ]
  [ "conduit-lwt.dev" "git+https://github.com/dinosaure/ocaml-conduit.git#8912d458b2f3e43245e99cf3cb74e9c00712a8b0" ]
  [ "cohttp.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#7f0efc6d7e0420e3abff99d29633519785c41f4b" ]
  [ "cohttp-lwt.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#7f0efc6d7e0420e3abff99d29633519785c41f4b" ]
]
