opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      "Thomas Gazagnaire"
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"       {>= "2.5.1"}
  "irmin-mirage"
  "irmin-git"  {>= "2.0.0"}
  "git-mirage"
  "mirage-kv" {>= "3.0.0"}
]

synopsis: "MirageOS-compatible Irmin stores"

pin-depends: [
  [ "git-mirage.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "git.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "carton.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "carton-lwt.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "carton-git.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "nss.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "conduit.dev" "git+https://github.com/dinosaure/ocaml-conduit.git#4dffc531e6dde24fcc6aec84bb453f5bea277e80" ]
  [ "conduit-mirage.dev" "git+https://github.com/dinosaure/ocaml-conduit.git#4dffc531e6dde24fcc6aec84bb453f5bea277e80" ]
  [ "cohttp.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#63e6026178b8a8750837f343d386ad5445aa236d" ]
  [ "cohttp-mirage.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#63e6026178b8a8750837f343d386ad5445aa236d" ]
]
