opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      "Thomas Gazagnaire"
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"       {>= "2.5.1"}
  "irmin-mirage"
  "irmin-git"  {>= "2.0.0"}
  "git-mirage"
  "git-cohttp-mirage"
  "mirage-kv" {>= "3.0.0"}
  "conduit-lwt"
]

synopsis: "MirageOS-compatible Irmin stores"

pin-depends: [
  [ "git-mirage.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "git.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "carton.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "carton-lwt.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "carton-git.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "nss.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "conduit.dev" "git+https://github.com/dinosaure/ocaml-conduit.git#8912d458b2f3e43245e99cf3cb74e9c00712a8b0" ]
  [ "conduit-mirage.dev" "git+https://github.com/dinosaure/ocaml-conduit.git#8912d458b2f3e43245e99cf3cb74e9c00712a8b0" ]
  [ "cohttp.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#7f0efc6d7e0420e3abff99d29633519785c41f4b" ]
  [ "cohttp-mirage.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#7f0efc6d7e0420e3abff99d29633519785c41f4b" ]
]
