opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"         {>= "4.01.0"}
  "dune"          {>= "2.5.1"}
  "irmin"         {>= "2.1.0"}
  "irmin-mem"     {>= "2.0.0"}
  "irmin-git"     {>= "2.0.0"}
  "irmin-http"    {>= "2.0.0"}
  "irmin-fs"      {>= "2.0.0"}
  "irmin-pack"    {>= "2.0.0"}
  "irmin-graphql"
  "git-unix"
  "digestif"      {>= "0.6.1"}
  "irmin-watcher" {>= "0.2.0"}
  "yaml"          {>= "0.1.0"}
  "astring"
  "astring"
  "cohttp"
  "cohttp-lwt"
  "conduit"
  "conduit-lwt"
  "logs"
  "uri"
  "irmin-test"    {with-test & >= "2.0.0"}
]

synopsis: "Unix backends for Irmin"
description: """
`Irmin_unix` defines Unix backends (including Git and HTTP) for Irmin, as well
as a very simple CLI tool (called `irmin`) to manipulate and inspect Irmin
stores.
"""

pin-depends: [
  [ "git-unix.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "git.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "carton.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "carton-lwt.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "carton-git.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "nss.dev" "git+https://github.com/mirage/ocaml-git.git#436e84defab9b41c6024d5462584e27fa3fb5f33" ]
  [ "conduit.dev" "git+https://github.com/dinosaure/ocaml-conduit.git#4dffc531e6dde24fcc6aec84bb453f5bea277e80" ]
  [ "conduit-lwt.dev" "git+https://github.com/dinosaure/ocaml-conduit.git#4dffc531e6dde24fcc6aec84bb453f5bea277e80" ]
  [ "cohttp.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#63e6026178b8a8750837f343d386ad5445aa236d" ]
  [ "cohttp-lwt.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#63e6026178b8a8750837f343d386ad5445aa236d" ]
  [ "cohttp-lwt-unix.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#63e6026178b8a8750837f343d386ad5445aa236d" ]
  [ "cohttp-lwt-tls.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#63e6026178b8a8750837f343d386ad5445aa236d" ]
  [ "cohttp-lwt-ssl.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#63e6026178b8a8750837f343d386ad5445aa236d" ]
]
