opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/irmin"
bug-reports:  "https://github.com/mirage/irmin/issues"
dev-repo:     "git+https://github.com/mirage/irmin.git"
doc:          "https://mirage.github.io/irmin/"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"         {>= "4.01.0"}
  "dune"          {>= "2.5.1"}
  "irmin"         {>= "2.1.0"}
  "irmin-mem"     {>= "2.0.0"}
  "irmin-git"     {>= "2.0.0"}
  "irmin-http"    {>= "2.0.0"}
  "irmin-fs"      {>= "2.0.0"}
  "irmin-pack"    {>= "2.0.0"}
  "irmin-graphql"
  "git-unix"
  "digestif"      {>= "0.9.0"}
  "irmin-watcher" {>= "0.2.0"}
  "yaml"          {>= "0.1.0"}
  "astring"
  "astring"
  "cohttp"
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "conduit"
  "conduit-lwt"
  "logs"
  "uri"
  "irmin-test"    {with-test & >= "2.0.0"}
]

synopsis: "Unix backends for Irmin"
description: """
`Irmin_unix` defines Unix backends (including Git and HTTP) for Irmin, as well
as a very simple CLI tool (called `irmin`) to manipulate and inspect Irmin
stores.
"""

pin-depends: [
  [ "git-unix.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "git.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "carton.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "carton-lwt.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "carton-git.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "nss.dev" "git+https://github.com/mirage/ocaml-git.git#792751dc689c6593efd515dfffb9f1722c6c2f53" ]
  [ "conduit.dev" "git+https://github.com/dinosaure/ocaml-conduit.git#8912d458b2f3e43245e99cf3cb74e9c00712a8b0" ]
  [ "conduit-lwt.dev" "git+https://github.com/dinosaure/ocaml-conduit.git#8912d458b2f3e43245e99cf3cb74e9c00712a8b0" ]
  [ "conduit-lwt-tls.dev" "git+https://github.com/dinosaure/ocaml-conduit.git#8912d458b2f3e43245e99cf3cb74e9c00712a8b0" ]
  [ "conduit-lwt-ssl.dev" "git+https://github.com/dinosaure/ocaml-conduit.git#8912d458b2f3e43245e99cf3cb74e9c00712a8b0" ]
  [ "cohttp.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#7f0efc6d7e0420e3abff99d29633519785c41f4b" ]
  [ "cohttp-lwt.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#7f0efc6d7e0420e3abff99d29633519785c41f4b" ]
  [ "cohttp-lwt-unix.dev" "git+https://github.com/dinosaure/ocaml-cohttp.git#7f0efc6d7e0420e3abff99d29633519785c41f4b" ]
]
