(library
 (name irmin_unix)
 (public_name irmin-unix)
 (libraries git-unix.curl astring cmdliner cohttp cohttp-lwt cohttp-lwt-unix
   conduit conduit-lwt fmt.cli fmt.tty git git-unix irmin irmin-fs irmin-git
   irmin-graphql irmin-http irmin-mem irmin-pack irmin-watcher logs.cli
   logs.fmt lwt lwt.unix uri yaml))
